Excluding user images in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,8 @@ Thumbs.db
 # Templates
 /src/main/resources/fonts/
 /src/main/resources/images/ui/
+/src/main/resources/images/user/*
+/src/main/resources/images/user/.gitkeep
 
 # output
 output/*
