Update gitignore to track user images

--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,7 @@ Thumbs.db
 /src/main/resources/fonts/
 /src/main/resources/images/ui/
 /src/main/resources/images/user/*
-/src/main/resources/images/user/.gitkeep
+!/src/main/resources/images/user/.gitkeep
 
 # output
 output/*
